Fixed navbar so that on mobile devices it is at full width #2

--- a/src/styles/GraphDisplay.css
+++ b/src/styles/GraphDisplay.css
@@ -15,9 +15,6 @@ canvas{
 
 
 @media only screen and (max-width: 768px) {
-  .Navbar {
-    width: 100%px;
-  }
   nav{
     max-width: 100%;
   }
